[gd_scene load_steps=5 format=3 uid="uid://5jl5h4do11it"]

[ext_resource type="PackedScene" uid="uid://bjwise3yu62uw" path="res://components/ui/selection_circle/selection_circle.tscn" id="1_avemp"]
[ext_resource type="Script" uid="uid://b5pvubhrvhc7u" path="res://components/general/selection/selection.gd" id="1_oaywr"]
[ext_resource type="Shader" uid="uid://bjcsr5yxqf65y" path="res://shaders/dotted-outline.gdshader" id="4_3vmg6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ku88n"]
shader = ExtResource("4_3vmg6")
shader_parameter/ant_color_1 = Color(0.645878, 0.535913, 0.971677, 1)
shader_parameter/ant_color_2 = Color(0, 0, 0, 1)
shader_parameter/ant_width = 2.0
shader_parameter/ant_length = 10.0
shader_parameter/ant_speed = 30.0

[node name="selection" type="Control"]
layout_mode = 3
anchor_right = 0.19
anchor_bottom = 0.227
offset_right = 0.11998
offset_bottom = -0.0960083
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_oaywr")

[node name="outline" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ku88n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.235294, 0.235294, 0.235294, 0)

[node name="SelectionCircleLeftCenter" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 1

[node name="SelectionCircleLeftBottom" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 1
grow_vertical = 0

[node name="SelectionCircleLeftTop" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 1
grow_vertical = 1

[node name="SelectionCircleRightCenter" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 0

[node name="SelectionCircleRightBottom" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0

[node name="SelectionCircleRightTop" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 1

[node name="SelectionCircleTopCenter" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -8.0
offset_top = -7.0
offset_right = 8.0
offset_bottom = 9.0
grow_vertical = 1

[node name="SelectionCircleBottomCenter" parent="." instance=ExtResource("1_avemp")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_vertical = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
